[project]
name = "container"
version = "0.1.0"
description = "container"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_status"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
